Commenting fancy images

--- a/mockGenerator/app/js/mockGenerator/modalInstance.html
+++ b/mockGenerator/app/js/mockGenerator/modalInstance.html
@@ -47,11 +47,11 @@
 	<div ng-if="modalType != 'info'">
 		{{ consoleMsg }}
 
-		<div class="text-center mt10">
+		<!--<div class="text-center mt10">
 			<strong>{{ textImage }}</strong>
 			<br />
-			<img class="gif-image" ng-src="{{ gifImage }}" />
-		</div>
+			 <img class="gif-image" ng-src="{{ gifImage }}" /> 
+		</div>-->
 
 	</div>
 </div>
